Expand issue box and align submit btn

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -333,7 +333,7 @@ input[type=submit] {
     letter-spacing: 0.1rem;
     background-color: rgb(85, 110, 223);
     appearance: none;
-    margin-top: 10rem;
+    margin-top: 3rem;
 }
 /*------------------------------------------Media Queries*/
 
